--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  caller: ^0.0.4
+  caller:
+    path: ../caller/
   contacts_service: ^0.6.3
 
 dev_dependencies:
